--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MarikTar/ParserScreenshots#readme",
   "dependencies": {
+    "@splidejs/splide": "^2.4.14",
     "parcel": "^1.12.4"
   },
   "devDependencies": {
