--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "sass": "^1.26.11"
+    "sass": "^1.26.11",
+    "typescript": "^4.0.3"
   }
 }
