--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "homepage": "https://github.com/MarikTar/ParserScreenshots#readme",
   "dependencies": {
     "@splidejs/splide": "^2.4.14",
-    "parcel": "^1.12.4"
+    "parcel": "2.9.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "sass": "^1.26.11",
-    "typescript": "^4.0.3"
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "5.3.3",
+    "parcel-bundler": "^1.12.5",
+    "sass": "1.62.1",
+    "typescript": "^5.1.3"
   }
 }
