--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/MarikTar/ParserScreenshots#readme",
   "dependencies": {
-    "@splidejs/splide": "^2.4.14",
     "parcel": "2.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +29,16 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "eslint": "8.24.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-plugin-etc": "2.0.2",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
     "parcel-bundler": "^1.12.5",
     "sass": "1.62.1",
     "typescript": "^5.1.3"
