--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/MarikTar/ParserScreenshots#readme",
   "dependencies": {
+    "@peculiar/react-components": "^0.2.1",
     "parcel": "2.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
