--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,16 +11,14 @@
     "strict": true,
     "moduleResolution": "node",
     "baseUrl": "./src",
-    "paths": {
-      "~/*": [ "./*" ]
-    },
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "typeRoots": [
       "node_modules/@types"
     ],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
