--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   "homepage": "https://github.com/MarikTar/ParserScreenshots#readme",
   "dependencies": {
     "@peculiar/react-components": "0.3.9",
+    "@use-effect/did-update": "0.0.3",
+    "md5": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.11.2"
+    "react-router-dom": "6.11.2",
+    "use-carousel-hook": "0.2.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.9.3",
+    "@types/md5": "^2.3.2",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/react-router-dom": "5.3.3",
