--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "rm -rf dist && parcel build ./src/index.html --public-url /ParserScreenshots",
-    "deploy": "gh-pages -d dist"
+    "build": "rm -rf dist && parcel build ./src/index.html"
   },
   "repository": {
     "type": "git",
@@ -17,13 +16,12 @@
   "bugs": {
     "url": "https://github.com/MarikTar/ParserScreenshots/issues"
   },
-  "homepage": "https://github.com/MarikTar/ParserScreenshots#readme",
   "dependencies": {
     "@peculiar/react-components": "0.3.9",
     "@use-effect/did-update": "0.0.3",
     "md5": "^2.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "6.11.2",
     "use-carousel-hook": "0.2.1"
   },
