--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "rm -rf dist && parcel build ./src/index.html --public-url /ParserScreenshots",
+    "build": "rm -rf dist && parcel build ./src/index.html",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
