--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "rm -rf dist && parcel build ./src/index.html",
-    "deploy": "gh-pages -d dist"
+    "build": "rm -rf dist && parcel build ./src/index.html"
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,7 @@
     "md5": "2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hotkeys-hook": "4.4.1",
     "react-router-dom": "6.11.2",
     "use-carousel-hook": "0.2.1"
   },
